--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -1,8 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700&display=swap');
 body {
+  margin: 0;
+  font-family: 'Open Sans', sans-serif, 'Raleway', 'Rubik';
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
   background: #000000;
   color: #FFFFFF;
-  font-family: 'Open Sans', sans-serif;
 }
 
 ul {
