--- a/src/assets/css/Learn_More_With_Authorization.css
+++ b/src/assets/css/Learn_More_With_Authorization.css
@@ -1,4 +1,9 @@
-.support-form {
+.learn-more1-page {
+    background: url("../img/rent/rentBG.jpg") no-repeat top/100%;
+    height: 800px;
+}
+
+.learn-more1-form {
     display: block;
     margin: 120px auto 0px;
     width: 550px;
@@ -7,7 +12,7 @@
     background: #171717;
 }
 
-.support-page__btn {
+.learn-more1-page__btn {
     width: 285px;
     height: 65px;
     background: #000000;
@@ -19,14 +24,14 @@
     line-height: 21px;
     text-align: center;
     color: #FFFFFF;
-    transform: translate(-2px, -375px);
+    transform: translate(125px, -375px);
 }
 
-.support-form__title {
+.learn-more1-form__title {
     margin-bottom: 35px;
 }
 
-.support-form__title > span {
+.learn-more1-form__title > span {
     text-align: center;
     display: block;
     font-family: 'Rubik';
@@ -38,7 +43,7 @@
     margin-bottom: 10px;
 }
 
-.support-form__blockTitle {
+.learn-more1-form__blockTitle {
     display: block;
     margin-bottom: 12px;
     font-family: 'Open Sans';
@@ -48,7 +53,7 @@
     color: #FFFFFF;
 }
 
-.support-form__blockTitle1 {
+.learn-more1-form__blockTitle1 {
     display: block;
     margin-bottom: 12px;
     font-family: 'Open Sans';
