--- a/src/assets/css/Learn_More_Without_Authorization.css
+++ b/src/assets/css/Learn_More_Without_Authorization.css
@@ -1,4 +1,9 @@
-.support-form {
+.learn-more-page {
+    background: url("../img/rent/rentBG.jpg") no-repeat top/100%;
+    height: 800px;
+}
+
+.learn-more-form {
     display: block;
     margin: 120px auto 0px;
     width: 550px;
@@ -7,7 +12,7 @@
     background: #171717;
 }
 
-.support-page__btn {
+.learn-more-page__btn {
     width: 285px;
     height: 65px;
     background: #000000;
@@ -22,11 +27,11 @@
     transform: translate(-2px, -375px);
 }
 
-.support-form__title {
+.learn-more-form__title {
     margin-bottom: 35px;
 }
 
-.support-form__title > span {
+.learn-more-form__title > span {
     text-align: center;
     display: block;
     font-family: 'Rubik';
@@ -38,7 +43,7 @@
     margin-bottom: 10px;
 }
 
-.support-form__blockTitle {
+.learn-more-form__blockTitle {
     display: block;
     margin-bottom: 12px;
     font-family: 'Open Sans';
@@ -48,7 +53,7 @@
     color: #FFFFFF;
 }
 
-.support-form__blockTitle1 {
+.learn-more-form__blockTitle1 {
     display: block;
     margin-bottom: 12px;
     font-family: 'Open Sans';
@@ -59,7 +64,7 @@
     transform: translate(350px, -430px);
 }
 
-.support-form__blockTitle2 {
+.learn-more-form__blockTitle2 {
     display: block;
     margin-bottom: 1px;
     font-family: 'Open Sans';
@@ -70,7 +75,7 @@
     transform: translate(140px, -390px);
 }
 
-.support-form__blockTitle3 {
+.learn-more-form__blockTitle3 {
     display: block;
     margin-bottom: 1px;
     font-family: 'Open Sans';
