--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Rubik&display=swap');
 body {
   margin: 0;
   font-family: 'Open Sans', sans-serif, 'Raleway', 'Rubik';
@@ -18,4 +19,8 @@ ul {
 a {
   text-decoration: none;
   color: #000;
+}
+
+button {
+  cursor: pointer;
 }
