--- a/src/assets/css/css_authorized/Feedback.css
+++ b/src/assets/css/css_authorized/Feedback.css
@@ -1,5 +1,5 @@
 .feedback-page {
-    background: url("../img/rent/rentBG.jpg") no-repeat top/100%;
+    background: url("../../img/rent/rentBG.jpg") no-repeat top/100%;
     height: 800px;
 }
 
