Update structure of the client part

--- a/src/assets/css/css_authorized/Curr_Order.css
+++ b/src/assets/css/css_authorized/Curr_Order.css
@@ -104,6 +104,7 @@ a {
     text-align: center;
 
     color: #FFFFFF;
+    transform: translate(-10px, 1px);
 }
 .transparentBtn {
     width: 200px;
