--- a/src/assets/css/Header.css
+++ b/src/assets/css/Header.css
@@ -45,3 +45,9 @@
     font-size: 20px;
     color: #FFFFFF;
 }
+
+.menu__element_logo {
+    text-decoration: none;
+    font-style: normal;
+    color: #FFFFFF;
+}
