--- a/src/assets/css/Reg.css
+++ b/src/assets/css/Reg.css
@@ -53,20 +53,20 @@
     border: none;
 }
 
-.regPage__btn::after {
+.regPage__btn_after {
     position: absolute;
     top: 60px;
     left: 48px;
     display: block;
-    content: "Нажимая данную кнопку вы соглашаетесь с обработкой персональных данных";
     width: 203px;
     font-family: 'Open Sans';
     font-style: normal;
     font-weight: 300;
-    font-size: 10px;
+    font-size: 13px;
     line-height: 14px;
     text-align: center;
     color: #FFFFFF;
+    transform: translate(840px, 670px);
 }
 
 .rent-form__blockTitle {
