--- a/src/assets/css/Reg.css
+++ b/src/assets/css/Reg.css
@@ -94,6 +94,15 @@ input {
     padding-left: 20px;
     color: #FFFFFF;
 }
+.ent-form__blockTitle {
+    display: block;
+    margin-bottom: 10px;
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 300;
+    font-size: 16px;
+    color: #FFFFFF;
+}
 
 .error {
     border: 1px solid red;
